--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
   },
   "homepage": "https://github.com/dogma-io/eslint-plugin-opinionated#readme",
   "devDependencies": {
+    "@babel/core": "7.5.4",
     "babel-core": "^7.0.0-0",
-    "babel-jest": "23.6.0",
-    "babel-preset-nodely": "0.4.0",
-    "codecov": "3.1.0",
-    "jest": "23.6.0",
+    "babel-jest": "24.8.0",
+    "babel-preset-nodely": "0.4.2",
+    "codecov": "3.5.0",
+    "jest": "24.8.0",
     "lintly": "0.3.0",
     "nodely": "0.8.0"
   }
